# tg-tool

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  utils.rs
src/commands/: dialogs.rs  folders.rs  login.rs  mod.rs
src/serialization/: mod.rs
