[package]
name = "tg-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
eyre = "0.6.12"
grammers-client = "0.7.0"
grammers-tl-types = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
tokio = { version = "1.46.1", features = ["rt", "macros"] }
